--- a/docs/scss/projects.scss
+++ b/docs/scss/projects.scss
@@ -1,5 +1,5 @@
 html {
-  background-color: $black;
+  background-color: #000;
 }
 
 /*
@@ -42,24 +42,24 @@ header profile area
   font-family: $lato;
   font-size: 48px;
   line-height: 1.2em;
-  margin: 1vw auto 8px -3px;
-  color: $black;
+  margin: 1vw auto 1vw -3px;
+  color: $black-s;
 }
 
 .p-h-japanese-name {
   font-family: $notoSans;
   font-size: 32px;
   font-weight: 100;
-  color: $black;
-  margin-bottom: 32px;
+  color: $black-s;
+  margin-bottom: 4vw;
 }
 
 .p-h-email {
   font-family: $lato;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 100;
   color: $black;
-  margin-bottom: 64px;
+  margin-bottom: 7vw;
 }
 
 .p-h-history-wrapper {
@@ -69,7 +69,7 @@ header profile area
 .p-h-history-title {
   width: 160px;
   font-family: $notoSans;
-  color: $black;
+  color: $black-s;
   h3 {
     font-size: 20px;
     font-weight: 900;
@@ -109,7 +109,7 @@ contains area
 
 .p-c-box-1 {
   position: relative;
-  background-color: #fadf09;
+  background-color: #b7eb56;
   height: 20vw;
   max-height: 400px;
   @include border-content;
@@ -127,7 +127,7 @@ contains area
 
 .p-c-box-3 {
   position: relative;
-  background-color: #2aa7c7;
+  background-color: #69c72a;
   height: 40vw;
   max-height: 800px;
   @include border-content;
@@ -143,14 +143,14 @@ universal
   font-family: $notoSans;
   font-size: 16px;
   font-weight: 100;
-  color: $black;
+  color: $black-s;
   padding: 16px;
   line-height: 1.5em;
 }
 
 .p-u-box-title {
   font-family: $notoSans;
-  color: $black;
+  color: $black-s;
   padding: 16px;
   line-height: 2em;
   cursor: pointer;
@@ -221,12 +221,12 @@ Media query
 
   .p-h-japanese-name {
     font-size: 28px;
-    margin-bottom: 8px;
+    margin-bottom: 24px;
   }
 
   .p-h-email {
     font-size: 16px;
-    margin-bottom: 24px;
+    margin-bottom: 40px;
   }
 
   .p-h-history-wrapper {
