--- a/docs/scss/utilities.scss
+++ b/docs/scss/utilities.scss
@@ -1,10 +1,10 @@
 .u-border {
-  border-right: 4px solid #000;
+  border-right: 16px solid $border-color;
 }
 
 .u-border-content {
-  border-top: 4px solid #000;
-  border-left: 4px solid #000;
+  border-top: 16px solid $border-color;
+  border-left: 16px solid $border-color;
 }
 
 .u-pdg-32-btm {
