--- a/docs/scss/variables.scss
+++ b/docs/scss/variables.scss
@@ -7,6 +7,8 @@ $link: #427bb0;
 $linkHover: #2bd3f8;
 $linkVisited: #1b4e7d;
 
+$border-color: #fff;
+
 @import url("https://fonts.googleapis.com/css?family=Lato|Noto+Sans+JP|Noto+Serif+JP|Playfair+Display");
 
 $notoSans: "Noto Sans JP", sans-serif;
@@ -15,15 +17,15 @@ $lato: "Lato", sans-serif;
 $playfair: "Playfair Display", serif;
 
 @mixin border {
-  border-top: 4px solid #000;
-  border-left: 4px solid #000;
+  border-top: 16px solid $border-color;
+  border-left: 16px solid $border-color;
 }
 
 @mixin border-content {
-  border-right: 4px solid #000;
-  border-bottom: 4px solid #000;
+  border-right: 16px solid $border-color;
+  border-bottom: 16px solid $border-color;
 }
 
 $transition: all 0.2s ease-in-out;
 
-$profilesize: calc(60vw - 4px);
+$profilesize: calc(60vw - 16px);
